# ops-center

./: .dockerignore  .env.brigade  .env.example  .env.test.example  .gitignore  BACKUP_FRONTEND_GUIDE.md  BACKUP_FRONTEND_QUICK_REF.md  BACKUP_SYSTEM_SUMMARY.md  BRIGADE_INSTALLATION.md  BRIGADE_SETUP_STATUS.md  BUY_CREDITS_SETUP.md  CHANGELOG.md  CLAUDE.md  CLAUDE_AGENT_SDK_IMPLEMENTATION_PLAN.md  CLAUDE_AGENT_SDK_PHASE_2_COMPLETE.md  CLI_TENANTS_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_BACKUP_GUIDE.md  DATABASE_BACKUP_IMPLEMENTATION.md  DATABASE_BACKUP_QUICK_REF.md  DNS_CONFIGURATION_SUMMARY.md  DNS_QUICK_REFERENCE.md  Dockerfile  EPIC-5.0-IMPLEMENTATION-SUMMARY.md  EPIC-5.0-QUICK-REFERENCE.md  EPIC_10_MULTITENANT_COMPLETE.md  EPIC_11_COMPLETE.md  EPIC_11_FINAL_SUMMARY.md  EPIC_11_JAVASCRIPT_SDK_COMPLETE.md  EPIC_11_PLUGIN_ARCHITECTURE.md  EPIC_11_PYTHON_SDK_COMPLETE.md  EPIC_11_QUICK_REF.md  EPIC_12_COMPLETE.md  EPIC_12_THE_COLONEL_AGENT.md  EPIC_13_COMPLETE.md  EPIC_13_CORRELATION_ENGINE_COMPLETE.md  EPIC_13_PREDICTION_ENGINE_COMPLETE.md  EPIC_13_SMART_ALERTS.md  EPIC_14_COMPLETE.md  (+100 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
admin-docs/: Dockerfile  docker-compose.yml  mkdocs.yml
alembic/: README
backend/: .coveragerc  ADMIN_ACCESS_TROUBLESHOOTING.md  ANALYTICS_API_QUICK_REFERENCE.md  ANALYTICS_METERING_IMPLEMENTATION.md  BILLING_API_QUICK_REFERENCE.md  BORGBACKUP_IMPLEMENTATION.md  BORG_INTEGRATION_GUIDE.md  BYOK_API_DOCUMENTATION.md  BYOK_IMPLEMENTATION_COMPLETE.md  BYOK_QUICK_REFERENCE.md  CLOUDFLARE_MANAGER_README.md  CSRF_FLOW_DIAGRAM.md  CSRF_IMPLEMENTATION.md  CSRF_IMPLEMENTATION_SUMMARY.md  CSRF_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  EMAIL_IMPORT_FIX_REPORT.md  EPIC_1.4_BORGBACKUP_COMPLETE.md  EPIC_1.8_API_DOCUMENTATION.md  EPIC_1.8_DELIVERY_SUMMARY.md  EPIC_1.8_QUICK_START.md  EPIC_4.5_API_REFERENCE.md  EPIC_4.5_PHASE2_GUIDE.md  FIREWALL_API_DELIVERY_SUMMARY.md  FIREWALL_API_INTEGRATION.md  FIREWALL_API_QUICK_REFERENCE.md  FIREWALL_API_README.md  IMPLEMENTATION_COMPLETE.txt  (+367 more)
(+1718 files in other folders)
